--- a/SpringBoot/mensagem-sistema/src/main/resources/application.properties
+++ b/SpringBoot/mensagem-sistema/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-nome=Miguel
-email=Carraro@blablabla.com
-telefones=119435428174,11934512345
+remetente.nome=Miguel
+remetente.email=Carraro@blablabla.com
+remetente.telefones=119435428174,11934512345
