--- a/SpringBoot/aulaJPA/src/main/resources/application.properties
+++ b/SpringBoot/aulaJPA/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=aulaJPA
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/decola_tech
+spring.datasource.username=******
+spring.datasource.password=******
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
