deixando mais compreensivel caso outros precisem usar

--- a/SpringBoot/aulaJPA/src/main/resources/application.properties
+++ b/SpringBoot/aulaJPA/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/decola_tech
-spring.datasource.username=******
-spring.datasource.password=******
+spring.datasource.url=jdbc:postgresql://localhost:5432/decola_tech(aqui você coloca o nome do seu db)
+spring.datasource.username=(coloque seu usuario do postgres aqui)
+spring.datasource.password=(coloque sua senha do postgres aqui)
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
